# crudlang

./: .gitignore  Cargo.toml  README.md
examples/api/: customers.ctl
examples/api/customer/: controller.crud  web.crud
examples/model/: customers
source/hello/: service.crud  web.crud  web.tp
src/: ast_compiler.rs  ast_pass.rs  builtin_functions.rs  bytecode_compiler.rs  bytecode_pass.rs  chunk.rs  compiler.rs  compiler.rs.txt  compiler_tests.rs  errors.rs  file_watch.rs  keywords.rs  lib.rs  main.rs  opcode.rs  reference_main.rs  repl.rs  scanner.rs  symbol_builder.rs  tokens.rs  value.rs  vm.rs
src/builtins/: builtin_functions.rs  globals.rs  list.rs  mod.rs  string.rs
src/compiler/: asm_pass.rs  assembly_pass.rs  ast_pass.rs  bytecode_pass.rs  compiler_tests.rs  mod.rs  scan_pass.rs  tokens.rs
syntax/crud/: CHANGELOG.md  package.json  vsc-extension-quickstart.md
syntax/crud/syntaxes/: crud.tmLanguage.json  tipi.tmLanguage.json
