[package]
name = "tipi-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
# log = "0.4"
log4rs = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
tokio-postgres = "0.7"
chrono = "0.4.42"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tower-http = { version = "0.6", features = ["fs"] }
tower = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower-livereload = "0.9.6"
log = "0.4.28"
walkdir = "2.5.0"
thiserror = "2.0.17"
url = "2.5.7"
clap = { version = "4.5.51", features = ["derive"] }
notify = "8.2.0"
arc-swap = "1.7.1"
regex = "1.12.2"
